Made all forms so that options that aren't real options aka. don't have a value, not selectable

--- a/views/editHorse.handlebars
+++ b/views/editHorse.handlebars
@@ -14,7 +14,7 @@
             <div class="style">
                 <label for="sex">Sex</label>
                 <select name="sex" id="sex">
-                    <option value=""> Select Option</option>
+                    <option selected hidden disabled> Select Option</option>
                     <option value="Gelding">Gelding</option>
                     <option value="Mare">Mare</option>
                     <option value="Stallion">Stallion</option>
@@ -35,7 +35,7 @@
             <div class="style">
                 <label for="chipped">Chipped</label>
                 <select name="chipped" id="chipped">
-                    <option value=""> Select Option</option>
+                    <option selected hidden disabled> Select Option</option>
                     <option value="true">Yes</option>
                     <option value="false">No</option>
                 </select>
@@ -43,7 +43,7 @@
             <div class="style">
                 <label for="tattooed">Tattooed</label>
                 <select name="tattooed" id="tattooed" class="style">
-                    <option value=""> Select Option</option>
+                    <option selected hidden disabled> Select Option</option>
                     <option value="true">Yes</option>
                     <option value="false">No</option>
                 </select>
@@ -75,7 +75,7 @@
             <div class="style">
                 <label for="quarantine">Quarantine</label>
                 <select name="quarantine" id="quarantine">
-                    <option value=""> Select Option</option>
+                    <option selected hidden disabled> Select Option</option>
                     <option value="true">Yes</option>
                     <option value="false">No</option>
                 </select>
@@ -87,7 +87,7 @@
             <div class="style">
                 <label for="horse">Owner Id</label>
                 <select name="owner" id="owner">
-                    <option value=""> Select Option</option>
+                    <option selected hidden disabled> Select Option</option>
                     {{#each owners}}
                     <option value={{this.id}}>{{this.id}}.
                         {{this.firstName}}
