--- a/views/editOwner.handlebars
+++ b/views/editOwner.handlebars
@@ -42,7 +42,7 @@
             <div class="style">
                 <label for="tp">Trailer Parking</label>
                 <select name="tp" id="tp">
-                    <option value=""> Select Option</option>
+                    <option selected hidden disabled> Select Option</option>
                     <option value=1>Yes</option>
                     <option value=0>No</option>
                 </select>
