--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -646,18 +646,17 @@ background: url(../images/mariana-proenca-yHSJ-hUOxs8-unsplash.jpg)  no-repeat c
 /* Style for Contact Failure page */
 #contact-failure-message-box {
   background: #ffffffbd;
-  width: 50%;
+  max-width: 550px;
+  width: 100%;
   height: auto;
   text-align:center;
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 10px;
+  margin: 0 auto;
+  padding: 10px;
 }
 
 #contact-failure-message {
   color: black;
   text-align: center;
-  padding-top: 20px;
 }
 
 #contactFailureBG {
@@ -728,6 +727,9 @@ h6 {
 
   }
   #contact-form {
+    width: 90%;
+  }
+  #contact-failure-message-box {
     width: 90%;
   }
 }
