--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -87,7 +87,7 @@
                             <li class=""><a href="/horse">Horses Data | </a></li>
                         </div>
                         <div class="navLogOut">
-                            <li id="nav-margin"><a href="/">Log Out</a></li>
+                            <li id="nav-margin"><button id="btn-logout" onclick="logout()"> Log Out</button></li>
                         </div>
                     </ul>
                 </div>
@@ -101,3 +101,5 @@
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.js"></script>
 <script src="/js/owners.js"></script>
+<script src="https://cdn.auth0.com/js/auth0-spa-js/1.2/auth0-spa-js.production.js"></script>
+<script src="/js/auth.js"></script>
