--- a/views/horse.handlebars
+++ b/views/horse.handlebars
@@ -130,7 +130,7 @@
                             <li class=""><a href="/owner">Owners Data | </a></li>
                         </div>
                         <div class="navLogOut">
-                            <li id="nav-margin"><a href="/"> Log Out</a></li>
+                            <li id="nav-margin"><button id="btn-logout" onclick="logout()"> Log Out</button></li>
                         </div>
                     </ul>
                 </div>
@@ -144,3 +144,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.js"></script>
 {{!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> --}}
 <script src="/js/horses.js"></script>
+<script src="https://cdn.auth0.com/js/auth0-spa-js/1.2/auth0-spa-js.production.js"></script>
+<script src="/js/auth.js"></script>
