--- a/views/horseOwnerLoginLanding.handlebars
+++ b/views/horseOwnerLoginLanding.handlebars
@@ -75,10 +75,12 @@
                 <div class="navOut" id="navOut">
                     <ul class="menu menu-hover-lines">
                         <div class="navLogOut">
-                            <li><a href="/"> Log Out</a></li>
+                            <li><button id="btn-logout" onclick="logout()"> Log Out</button></li>
                         </div>
                     </ul>
                 </div>
             </div>
     </div>
 </div>
+<script src="https://cdn.auth0.com/js/auth0-spa-js/1.2/auth0-spa-js.production.js"></script>
+<script src="/js/auth.js"></script>
