--- a/views/editOwner.handlebars
+++ b/views/editOwner.handlebars
@@ -62,6 +62,7 @@
         </div>
     </div>
 </div>
+<script src="/js/auth.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.js"></script>
