Auth0 is being used but isn't being checked again when they're sending api requests...

--- a/views/horseOwnerLoginLanding.handlebars
+++ b/views/horseOwnerLoginLanding.handlebars
@@ -75,10 +75,12 @@
                 <div class="navOut" id="navOut">
                     <ul class="menu menu-hover-lines">
                         <div class="navLogOut">
-                            <li><a href="/"> Log Out</a></li>
+                            <li><button id="btn-logout" onclick="logout()"> Log Out</button></li>
                         </div>
                     </ul>
                 </div>
             </div>
     </div>
 </div>
+
+<script src="/js/auth.js"></script>
