--- a/views/horseOwnerLoginLanding.handlebars
+++ b/views/horseOwnerLoginLanding.handlebars
@@ -1,16 +1,16 @@
 <div class="container" id="owner-landing-page-background">
 
     <div id="event-header">
-        <h2>UPCOMING EVENTS & APPOINTMENTS<br>
-            for Horse Owners</h2>
+        <p> UPCOMING EVENTS & APPOINTMENTS<br>
+            for Horse Owners</p> 
     </div>
 
-    <div class="grid-x grid-padding-x align-center-middle text-center" style="height: 200px; max-width=">
+    <div class="grid-x grid-padding-x align-center-middle text-center flip-card-box">
 
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="/images/origami_money_horse.jpg" alt="money horse" style="width:300px;height:200px;">
+                    <img src="/images/origami_money_horse.jpg" alt="money horse" class="flip-images">
                 </div>
                 <div class="flip-card-back">
                     <h3>Board Payment Due</h3>
@@ -23,8 +23,7 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="/images/horseshoe-with-nails-hammered-in-place.jpg" alt="horseshoe"
-                        style="width:300px;height:200px;">
+                    <img src="/images/horseshoe-with-nails-hammered-in-place.jpg" alt="horseshoe" class="flip-images">
                 </div>
                 <div class="flip-card-back">
                     <h3>Farrier Day</h3>
@@ -38,7 +37,7 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="/images/horse-vaccination.jpg" alt="vaccination" style="width:300px;height:200px;">
+                    <img src="/images/horse-vaccination.jpg" alt="vaccination" class="flip-images">
                 </div>
                 <div class="flip-card-back">
                     <h3>Vet Day</h3>
@@ -52,7 +51,7 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="/images/bonfire.jpeg" alt="bonfire" style="width:300px;height:200px;">
+                    <img src="/images/bonfire.jpeg" alt="bonfire" class="flip-images">
                 </div>
                 <div class="flip-card-back">
                     <h3>Farm Bonfire</h3>
@@ -63,8 +62,8 @@
         </div>
 
         <div>
-            <h2 id="owner-questions-message">Questions? <br>
-                Contact the Stable Manager</h2>
+            <p id="owner-questions-message">Questions? <br>
+                Contact the Stable Manager</p>
         </div>
     </div>
 
