add new log out tag for demo

--- a/views/horseOwnerLoginLanding.handlebars
+++ b/views/horseOwnerLoginLanding.handlebars
@@ -68,18 +68,21 @@
     </div>
 
 
-    <div class="nav" id="nav">
-        <ul class="menu menu-hover-lines">
-            <div class="navIn" id="navIn">
-                <div class="navOut" id="navOut">
-                    <ul class="menu menu-hover-lines">
-                        <div class="navLogOut">
-                            <li><button id="btn-logout" onclick="logout()"> Log Out</button></li>
-                        </div>
-                    </ul>
-                </div>
+    
+</div>
+<div class="nav" id="nav">
+    <ul class="menu menu-hover-lines">
+        <div class="navIn" id="navIn">
+            <div class="navOut" id="navOut">
+                <ul class="menu menu-hover-lines">
+                    <div class="navLogOut">
+                        <li id="nav-margin"><a href="/">Log Out</a></li>
+                        <li><button id="btn-logout" onclick="logout()" style="color: white;"> LOG OUT</button></li>
+                    </div>
+                </ul>
             </div>
-    </div>
+        </div>
+    </ul>
 </div>
 
 <script src="/js/auth.js"></script>
