--- a/views/horse.handlebars
+++ b/views/horse.handlebars
@@ -130,7 +130,8 @@
                             <li class=""><a href="/owner">Owners Data | </a></li>
                         </div>
                         <div class="navLogOut">
-                            <li id="nav-margin"><button id="btn-logout" onclick="logout()"> Log Out</button></li>
+                            <li id="nav-margin"><a href="/">Log Out</a></li>
+                            <li id="nav-margin"><button id="btn-logout" onclick="logout()" style="color: white;"> LOG OUT</button></li>
                         </div>
                     </ul>
                 </div>
