last-minute fixes to make the demo look better

--- a/views/horse.handlebars
+++ b/views/horse.handlebars
@@ -131,7 +131,7 @@
                         </div>
                         <div class="navLogOut">
                             <li id="nav-margin"><a href="/">Log Out</a></li>
-                            <li id="nav-margin"><button id="btn-logout" onclick="logout()" style="color: white;"> LOG OUT</button></li>
+                            {{!-- <li id="nav-margin"><button id="btn-logout" onclick="logout()" style="color: white;"> LOG OUT</button></li> --}}
                         </div>
                     </ul>
                 </div>
