--- a/views/horseOwnerLoginLanding.handlebars
+++ b/views/horseOwnerLoginLanding.handlebars
@@ -77,7 +77,7 @@
                 <ul class="menu menu-hover-lines">
                     <div class="navLogOut">
                         <li id="nav-margin"><a href="/">Log Out</a></li>
-                        <li><button id="btn-logout" onclick="logout()" style="color: white;"> LOG OUT</button></li>
+                        {{!-- <li><button id="btn-logout" onclick="logout()" style="color: white;"> LOG OUT</button></li> --}}
                     </div>
                 </ul>
             </div>
