--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -172,8 +172,8 @@
           <ul class="menu menu-hover-lines">
             <li id="contact-link"><a href="/contact"> Contact Us | </a></li>
             <li><a href="/ownerlogin"> Owner Log In | </a></li>
-            <li><a href="/owner"> Manager Log In | </a></li>
-            <li><button id="btn-login" onclick="login()" style="color: white;"> LOG IN </button></li>
+            <li><a href="/owner"> Manager Log In </a></li>
+            <li><button id="btn-login" onclick="login()" style="color: white;"> | LOG IN </button></li>
           </ul>
         </div>
 
